Fix scrollbar

--- a/src/main.sass
+++ b/src/main.sass
@@ -5,6 +5,9 @@ $breakpoint-large: 1000px
 
 $icon-size: 2em
 
+html
+  overflow-y: auto
+
 body
   display: flex
   flex-direction: column
